# oobabot-plugin

./: .gitignore  .pre-commit-config.yaml  README.md  oobabot_constants.py  oobabot_input_handlers.py  oobabot_layout.py  oobabot_worker.py  pyproject.toml  requirements.txt  script.py
.github/workflows/: python-package.yml
docs/: CONTRIBUTING.md  RELEASE-0.2.0.md  RELEASE-0.2.1.md  RELEASE-0.2.2.md  RELEASE-0.2.3.md
oobabot_plugin/: controller.py  input_handlers.py  install.py  instructions.md  layout.py  oobabot_constants.py  oobabot_input_handlers.py  oobabot_layout.py  oobabot_log.css  oobabot_log.js  oobabot_strings.py  oobabot_worker.py  script.py  strings.py  worker.py
src/oobabot_plugin/: __init__.py  ace.js  ace_mode_yaml.js  ace_oobabot.js  ace_theme_github.js  ace_theme_github_dark.js  ace_theme_twilight.js  bootstrap.py  button_enablers.py  button_handlers.py  controller.py  editor.html  input_handlers.py  install.py  layout.py  oobabot_log.css  oobabot_log.js  script.py  server.py  strings.py  transcript.md  transcript_view.py  worker.py
