[tool.poetry]
name = "oobabot-plugin"
version = "0.1.8"
description = "A plugin to oobabooga's text-generation-webui supporting AI-driven Discord bots."
authors = ["Christopher Rude <chris@rudesoftware.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chrisrude/oobabot-plugin"

[tool.poetry.dependencies]
python = "^3.8.1"
oobabot = "^0.1.8"
gradio = "^3.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
format = "grouped"
max-line-length = 88
show_source = true

[tool.flakeheaven.exceptions]
pycodestyle = ["-E203", "-W503", "-W504"]

[tool.poetry.group.test.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.0"
pytest = "^7.1"
pylint = "^2.17.4"

[tool.isort]
profile = "black"
force_single_line = true
force_sort_within_sections = true
single_line_exclusions = ["typing", "typing_extensions"]

[tool.pylint.'MAIN']
py-version = '3.8.1'
j = 8

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = "C0116,R0902,R0903,R0912,R0913,R0914,W0511,W0621"
include-naming-hint = true

[tool.poetry.scripts]
oobabot-plugin = 'oobabot_plugin.install:main'
