[tool.poetry]
name = "oobabot-plugin"
version = "0.2.3"
description = "A Discord bot plugin to oobabooga's text-generation-webui, based on oobabot."
authors = ["Christopher Rude <chris@rudesoftware.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chrisrude/oobabot-plugin"

[tool.poetry.dependencies]
python = "^3.8.1"
oobabot = "^0.2.3"
# oobabot = { path = "../oobabot" }
# text-generation-webui will now NOT work with gradio version
# 0.34.0 or newer for some reason.  So we have to use the same
# version that it does, which unfortunately contains known
# security vulerabilities.
# Remove this once text-generation-webui is updated to work with
# newer versions of gradio.
gradio = "~3.33.1"
# similarly, it needs to use version 0.2.5 of gradio-client
# specifically.  Sigh.
gradio-client = "0.2.5"
# we don't actually use fastapi, but it's a dependency of gradio
# and if this isn't specified, poetry will install a very old version
# (0.1.17) instead of the latest (0.99.1).  This older version won't
# work with gradio.  Remove this when either gradio or poetry fixes
# this issue.
fastapi = "^0.99.1"

[tool.poetry.scripts]
oobabot-plugin = 'oobabot_plugin.install:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
format = "grouped"
max-line-length = 88
show_source = true

[tool.flakeheaven.exceptions]
pycodestyle = ["-E203", "-W503", "-W504"]

[tool.poetry.group.test.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.0"
pylint = "^2.17.4"
pyright = "^1.1.325"
pytest = "^7.1"

[tool.isort]
profile = "black"
force_single_line = true
force_sort_within_sections = true
single_line_exclusions = ["typing", "typing_extensions"]

[tool.pylint.'MAIN']
py-version = '3.8.1'
j = 8

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = "C0116,R0902,R0903,R0912,R0913,R0914,W0511,W0621"
include-naming-hint = true
